--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 {% if least_question_list %}
     <ul>
     {% for question in least_question_list %}
-        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+        <li><a href="url 'polls:detail' question.id">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
